--- a/telegram.conf
+++ b/telegram.conf
@@ -1,5 +1,5 @@
 # Telegram config file
 log_level = 0;
 msg_num = 1;
-config_directory = "/var/web/telegram/.telegram";
+config_directory = "/home/telegram";
 
